--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.2.2",
+    "foundation-sites": "^6.6.3",
+    "jquery": "^3.5.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
