--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,7 @@
 default: &default
   adapter: mysql2
   encoding: utf8mb4
+  charset: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: <%= ENV.fetch("DATABASE_HOST") { localhost } %>
   username: <%= ENV.fetch("DATABASE_USER") { tango_dev_user } %>
