--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.2.2",
+    "cocoon-js": "^0.0.5",
     "foundation-sites": "^6.6.3",
     "jquery": "^3.5.1",
     "turbolinks": "^5.2.0"
