--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "4.2.2",
     "cocoon-js": "^0.0.5",
     "foundation-sites": "^6.6.3",
+    "import-glob-loader": "^1.1.0",
     "jquery": "^3.5.1",
     "turbolinks": "^5.2.0"
   },
